--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#C47502</color>
+    <color name="colorPrimaryDark">#000C0A</color>
+    <color name="colorAccent">#F3B609</color>
+    <color name="background">#EEEDEF</color>
 </resources>
