--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,6 +23,13 @@
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 
+    <activity
+        android:id="@+id/navigation_profile"
+        android:name="com.example.foodies.Profile"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
+
+
     <fragment
         android:id="@+id/navigation_signup"
         android:name="com.example.foodies.ui.notifications.NotificationsFragment"
