--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="colorPrimaryDark">#000C0A</color>
     <color name="colorAccent">#F3B609</color>
     <color name="background">#EEEDEF</color>
+
+<!--    <color name="colorPrimary">#5770f3</color>-->
+<!--    <color name="colorPrimaryDark">#5770f3</color>-->
+<!--    <color name="colorAccent">#D81B60</color>-->
+    <color name="gradient_start">#5770f3</color>
+    <color name="gradient_end">#8e5aeb</color>
+    <color name="profile_desc">#D1D1FF</color>
+    <color name="bg_meta_container">#000000</color>
+    <color name="profile_default_tint">#e0e0e0</color>
 </resources>
