--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,11 +23,11 @@
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 
-    <fragment
-        android:id="@+id/navigation_map"
-        android:name="com.example.foodies.ui.map.MapFragment"
-        android:label="@string/title_map"
-        tools:layout="@layout/fragment_map" />
+<!--    <fragment-->
+<!--        android:id="@+id/navigation_map"-->
+<!--        android:name="com.example.foodies.ui.map.MapFragment"-->
+<!--        android:label="@string/title_map"-->
+<!--        tools:layout="@layout/fragment_map" />-->
 
     <fragment
         android:id="@+id/navigation_signup"
