Allen_map_icon_and_key_changed

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,7 +11,7 @@
 
         <EditText
             android:id="@+id/location_search"
-            android:layout_width="314dp"
+            android:layout_width="370dp"
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -60,8 +60,18 @@
             android:layout_alignParentBottom="true"
             android:onClick="onClick"
             android:src="@mipmap/restaurant"
-            android:layout_centerHorizontal="true"
-            />
+            android:layout_toLeftOf="@id/return_back" />
+<!--            android:layout_centerHorizontal="true"-->
+
+        <ImageButton
+            android:id="@+id/return_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:onClick="onClick"
+            android:src="@mipmap/return1"/>
+
 
     </RelativeLayout>
 
