Add changes to profile fragment - running without previous deprecated package error

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.foodies.ui.ui.profile.ProfileFragment"
+        android:label="@string/profile"
+        tools:layout="@layout/fragment_profile"  />
+
+    <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.foodies.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
