Added button and image slider to home screen

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -37,6 +37,7 @@
                 android:background="@drawable/button_rounded"
                 android:text="UPLOAD PROFILE PIC"
                 android:textSize="18dp"
+                android:fontFamily="@font/brandontextbold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.437"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -146,6 +147,7 @@
                 android:background="@drawable/button_rounded"
                 android:text="Save Profile"
                 android:textSize="18dp"
+                android:fontFamily="@font/brandontextbold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.468"
