"enable the logout to go to signup page"

--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="350dp"
         android:layout_height="49dp"
-        android:text="Did you forgot your password?"
+        android:text="Did you forget your password?"
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
