--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,12 @@
     <color name="colorPrimary">#C47502</color>
     <color name="colorPrimaryDark">#000C0A</color>
     <color name="colorAccent">#F3B609</color>
+
+
+<!--        <color name="colorPrimary">#C47502</color>-->
+<!--        <color name="colorPrimaryDark">#FFFFFF</color>-->
+<!--        <color name="colorAccent">#5c0000</color>-->
+
     <color name="colorLight">#e6e6e6</color>
     <color name="background">#EEEDEF</color>
 </resources>
