--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,6 +66,7 @@
         android:fontFamily="@font/brandontextbold"
         android:text="Featured Restaurants"
         android:textSize="20dp"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/imageCard"
         app:layout_constraintStart_toStartOf="parent" />
 
