--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,8 +11,8 @@
 
         <EditText
             android:id="@+id/location_search"
-            android:layout_width="370dp"
-            android:layout_height="50dp"
+            android:layout_width="350sp"
+            android:layout_height="50sp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:ems="10"
@@ -24,7 +24,7 @@
         <ImageButton
             android:id="@+id/search_address"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="50sp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:onClick="onClick"
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MapsActivity"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="50sp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
