--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -70,7 +70,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:onClick="clickFunction"
-            android:src="@mipmap/return1"/>
+            android:src="@mipmap/to"/>
 
 
     </RelativeLayout>
