--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_message"
+        android:icon="@drawable/ic_message_black_24dp"
+        android:title="@string/messages" />
 
     <item
         android:id="@+id/navigation_profile"
@@ -20,12 +20,5 @@
 <!--        android:id="@+id/navigation_notifications"-->
 <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
 <!--        android:title="@string/title_notifications" />-->
-
-    <item
-        android:id="@+id/navigation_map"
-        android:icon="@drawable/ic_map_black_24dp"
-        android:title="Map" />
-
-
 
 </menu>
