--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,16 +11,17 @@
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
+    <activity
         android:id="@+id/navigation_message"
-        android:name="com.example.foodies.ui.home.HomeFragment"
+        android:name="com.example.foodies.MainChat"
         android:label="@string/messages"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/activity_message" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.example.foodies.ui.profile.ProfileFragment"
         android:label="@string/profile"
+        android:title = "profile"
         tools:layout="@layout/fragment_profile"  />
 
 
